Fixed card/button styling on mobile, account pages mobile compatible.

--- a/sadcowpng/sharedspaces/static/account.css
+++ b/sadcowpng/sharedspaces/static/account.css
@@ -15,6 +15,8 @@
     body {
         background-color: #D2FDFF;
         overflow: auto;
+        height: auto;
+        width: auto;
     }
 
     .container-fluid{
