--- a/sadcowpng/sharedspaces/static/header.css
+++ b/sadcowpng/sharedspaces/static/header.css
@@ -10,5 +10,6 @@
 
       nav{
           background-color: #F4976C;
+          width: auto;
       }
 
