--- a/sadcowpng/sharedspaces/static/spaces.css
+++ b/sadcowpng/sharedspaces/static/spaces.css
@@ -69,3 +69,31 @@
       overflow: auto;
   }
 
+  @media only screen and (max-width: 768px) {
+      .container-fluid{
+          width: 100%;
+          height: 100%;
+      }
+
+      th, td {
+          font-size: 14px;
+          margin-left: 10px;
+
+      }
+
+      .create_space_table, .update_space_table, .space_date_time_table{
+          width: 100%;
+          height: 100%;
+      }
+
+      .create_space_form, .update_space_form, .space_date_time_form{
+          width: 100%;
+          height: 100%;
+      }
+
+      .btn{
+          width: 90%;
+      }
+  }
+
+
